# r15-shell

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  chat.rs  config.rs  main.rs
