[package]
name = "r15-shell"
version = "0.1.0"
edition = "2021"
description = "A small Stack Overflow chat shell for room 15 and friends."
license = "MIT"
repository = "https://github.com/rajaasim/r15-shell"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
